started general refactoring and cleanup work.
Fri Sep  6 17:37:19 2002  Tim Janik  <timj@gtk.org>

        * started general refactoring and cleanup work.

        * beast-gtk/gxk/Makefile.am: new static library, holding
        Gtk+ extensions/fixes and new widgets which are not beast-specific.

        * beast-gtk/gxk/gxkcanvas.[hc]: new files covering gnome canvas
        related functions.

        * beast-gtk/gxk/gxkglobals.[hc]: global configuration stuff.

        * beast-gtk/gxk/gxkstock.[hc]: stock icon/action rekated functions.

        * beast-gtk/gxk/gxkutils.[hc]: miscellaneous utilities.

        * beast-gtk/utils.[hc]: move many things out of this file into gxk.

        * beast-gtk/*.[hc]: include fixes. adaptions to gxk.

        * beast-gtk/icons/Makefile.am: generate icon list with
        stock ids alongside the inlined pixbufs.

        * docs/reference/Makefile.am: generate beast-gxk.dat and manual
        page and get rid of the bst.* variants.

Wed Sep  4 01:39:42 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/bsttexttools.c (bst_scroll_text_create): prevent the location
        entry from eating space unneccessarily.

svn path=/trunk/; revision=545

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -3,15 +3,16 @@
 #
 ## Makefile.am for BEAST
  
-SUBDIRS = icons images
+SUBDIRS = gxk icons images
 
-INCLUDES = -I$(top_srcdir) $(BEAST_CFLAGS) -I. \
-           -DG_DISABLE_CONST_RETURNS -DGTK_ENABLE_BROKEN # -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
-
-#
-# programs to compile and install
-#
-bin_PROGRAMS = beast
+INCLUDES = $(strip \
+	-I$(top_srcdir)	\
+	-I. \
+	$(BEAST_CFLAGS) \
+	-DG_DISABLE_CONST_RETURNS \
+	-DGTK_ENABLE_BROKEN \
+)
+# -DGTK_DISABLE_DEPRECATED -DGTK_DISABLE_COMPAT_H
 
 # we specify the logging domain here
 DEFS += $(strip \
@@ -24,12 +25,12 @@ CFLAGS += # $(subst profile.c, -pg -a, $(findstring profile.c, $(<F)))
 LIBS += # -lefence # -pg 
 
 # link programs against BSE and other neccessary libraries
-progs_LDADD = \
+progs_LDADD = $(strip \
 	$(top_builddir)/bse/libbse.la \
 	$(top_builddir)/bsw/libbsw.la \
-	$(LDFLAGS) $(BEAST_LIBS)
-beast_LDADD = $(progs_LDADD)
-
+	./gxk/libgxk.a \
+	$(LDFLAGS) $(BEAST_LIBS) \
+)
 
 #
 # setup source file variables
@@ -230,7 +231,9 @@ $(srcdir)/bstmarshal.c: bstmarshal.list
 #
 # setup BEAST sources and their dependancies
 #
+bin_PROGRAMS = beast
 beast_SOURCES = bstmain.c $(beast_sources)
+beast_LDADD = $(progs_LDADD)
 noinst_PROGRAMS = bststest tsmview
 bststest_SOURCES = bststest.c bstutils.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
