remove bsttexttools.[hc] and bsttoolbar.[hc] in favour of GXK variants.
Wed Sep 11 18:23:00 2002  Tim Janik  <timj@gtk.org>

        * beast-gtk/Makefile.am: remove bsttexttools.[hc] and
        bsttoolbar.[hc] in favour of GXK variants.

        * beast-gtk/gxk/gxk.h:
        * beast-gtk/gxk/Makefile.am:
        * beast-gtk/gxk/gxktoolbar.[hc]:
        * beast-gtk/gxk/gxktexttools.[hc]: add new cleaned up,
        renamed and documented ports of the text tools and toolbar
        code to GXK.

        * docs/generated/Makefile.am: generate and check in faq.xml which
        is needed for the web site.

        * docs/generated/html.xsl:
        * docs/generated/markup.xsl: minor fixes from alper ersoy.

        * docs/generated/Makefile.am:
        * docs/generated/markup.dtd: added markup.dtd from alper ersoy and
        lint rule to check validity of markup output.

        * *.[hc]: adaptions to the GXK rename.

svn path=/trunk/; revision=550

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -77,8 +77,6 @@ beast_headers = $(strip \
 	bstsnetrouter.h \
 	bstsongshell.h \
 	bstsplash.h \
-	bsttexttools.h \
-	bsttoolbar.h \
 	bsttrackview.h \
 	bstsupershell.h \
 	bstusermessage.h \
@@ -135,8 +133,6 @@ beast_sources = $(strip \
 	bstsnetrouter.c \
 	bstsongshell.c \
 	bstsplash.c \
-	bsttexttools.c \
-	bsttoolbar.c \
 	bsttrackview.c \
 	bstsupershell.c \
 	bstusermessage.c \
@@ -233,7 +229,7 @@ beast_LDADD = $(progs_LDADD)
 noinst_PROGRAMS = bststest tsmview
 bststest_SOURCES = bststest.c bstutils.c bstqsampler.c
 bststest_LDADD = $(progs_LDADD)
-tsmview_SOURCES = tsmview.c $(beast_sources)
+tsmview_SOURCES = tsmview.c
 tsmview_LDADD = $(progs_LDADD)
 
 EXTRA_DIST += $(beast_headers) $(beast_extra_sources)
