new version from Alper, fixing table indentation, toc generation, spacing
Wed Sep 18 09:53:56 2002  Tim Janik  <timj@gtk.org>

        * docs/generated/markup.xsl: new version from Alper, fixing table
        indentation, toc generation, spacing in indices and improved table
        generation.

        * docs/generated/Makefile.am: add generic rule for *.texi -> *.markup
        generation.

svn path=/trunk/; revision=558

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,13 +33,13 @@ PKG_paths.h: $(top_srcdir)/configure Makefile
 
 #	&& (cmp -s xgen-pph $@ || cp xgen-pph $@) 
 
-# always built PKG_paths.h and create gsl link
+# always built PKG_paths.h and create links
 stamp-h: PKG_paths.h gsl
 
-# create builddir gsl link
+# create builddir links
 gsl:
 	ln -s bse gsl
-# dist ship the srcdir gsl link
+# dist ship the srcdir links
 EXTRA_DIST += gsl
 
 CLEANFILES += PKG_paths.h
