moved glue layer to SFI.
Mon Oct 21 22:19:04 2002  Tim Janik  <timj@gtk.org>

        * sfiglue.[hc]:
        * sfigluecodec.[hc]:
        * sfigluesignal.c:
        moved glue layer to SFI.

svn path=/trunk/; revision=581

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -21,6 +21,8 @@ libsfi_la_LIBADD = $(SFI_LIBS) -lm
 sfi_headers = $(strip \
 	glib-extra.h	\
 	sfi.h		\
+	sfiglue.h	\
+	sfigluecodec.h	\
 	sfinote.h	\
 	sfiparams.h	\
 	sfiprimitives.h	\
@@ -32,6 +34,8 @@ sfi_headers = $(strip \
 )
 sfi_c_sources = $(strip \
 	glib-extra.c	\
+	sfiglue.c	\
+	sfigluecodec.c	\
 	sfinote.c	\
 	sfiparams.c	\
 	sfiprimitives.c	\
@@ -42,6 +46,7 @@ sfi_c_sources = $(strip \
 	sfivcall.c	\
 )
 sfi_extra_sources = $(strip \
+	sfigluesignal.c	\
 )
 sfi_built_sources = $(strip \
 )
