moved toyprof code from BSE to here.
Tue Dec 31 03:01:30 2002  Tim Janik  <timj@gtk.org>

        * toyprof.[hc], toyprof.README, toyprof.pl: moved
        toyprof code from BSE to here.

        * toyprof-mem.[hc]: added GLibc specific memory profiler.

        * sfiprimitives.c: allocate SfiRec, SfiSeq, SfiBBlock and
        SfiFBlock via memblocks.

        * sfivalues.[hc]: added sfi_value_rec_take_ref() and
        sfi_value_seq_take_ref() which are value constructors
        that take over the intial reference count of a rec or seq,
        needed by sfidl.

        * sfigluecodec.c (sfi_glue_decoder_dispatch): run gc at the
        end of dispatch.

        * sfidl.cc (createTypeCode): fix reference counting of records and
        sequences, so we don't leak upon every conversion in generated code.

svn path=/trunk/; revision=805

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -35,6 +35,7 @@ sfi_c_sources = $(strip \
 	sfinote.c	sfiparams.c	sfiprimitives.c	sfiserial.c	\
 	sfitime.c	sfitypes.c	sfivalues.c	sfiustore.c	\
 	sfilog.c	sfithreads.c	sfimemory.c	sficomport.c	\
+	$(TOYPROF_C_SOURCES)	\
 )
 sfi_extra_sources = $(strip \
 	gbsearcharray.h \
@@ -91,6 +92,13 @@ testsfi.c: testidl.h testidl.c
 # TESTS
 #
 TESTS = testsfi
+
+#
+# TOYPROF: ppor man's profiling toy
+#
+TOYPROF_H_SOURCES = toyprof.h toyprof-mem.h
+TOYPROF_C_SOURCES = toyprof.c toyprof-mem.c
+EXTRA_DIST += toyprof.pl toyprof.README $(TOYPROF_H_SOURCES)
 
 
 EXTRA_DIST += $(sfi_public_headers) $(sfi_extra_sources) $(progs_extra_sources) $(sfi_built_sources)
