provide web-site banner.
Tue Dec 31 09:11:19 2002  Tim Janik  <timj@gtk.org>

	* docs/faq.texi: provide web-site banner.

	* docs/teximacros.texi:
	* docs/release-notes.texi: (re-)introduce displaySTART and
	displayEND which is the only way to force <para> tags out
	of <display> blocks with makeinfo-4.3 which is what beast
	currently depends on.

	* docs/site-*.texi:
	renamed pure website sources to site-*.

	* docs/generated/Makefile.am:
	major cleanup and restructuring. support 'site' target now.

	* docs/generated/log2texi.sh:
	shell script to generate .texi sources from ChangeLogs.
	this is a .texi-patched up version from Alper, based on
	my old beast web site script that used to generate raw
	html.

Mon Dec 30 18:21:33 2002  Alper Ersoy <aersoy@tfz.net>

	Here are website changes:

	* docs/generated/Makefile.am:
	New files in $html_targets: index, about, download, contacts,
	links, api-overview, log-beast, log-bse, log-plugins, log-sfi.
	New files in $build_tools: nav.xml, navigation.xsl, log2texi
	New files in $temp_texi: log-beast, log-bse, log-plugins, log-sfi
	%.html rule has two new parameters for xsltproc, which are
	this_file ($@) and images_prefix (cvs-images/).
	New rules for log files: log-beast.texi, log-bse.texi,
	log-plugins.texi, and log-sfi.texi
	faq.xml removed from $conditional_clean.

	* docs/generated/navigation.xsl:
	* docs/generated/html.xsl:
	Deprecated parameters: banner, navigation, uplinks, this_file,
	image_prefix.
	banner and navigation are substituted with texinfo macros.
	uplinks (which controls the generation of a 'go to top' link at
	every section title) is simply removed.  I may consider re-adding
	that later (even though I think people should use their "Home" keys,
	there are times when they may want a 'top' link).
	this_file moved to navigation.xsl.  image_prefix is renamed to
	images_prefix.
	Removed the old fashioned table based layout in favor of a modern,
	div based full CSS layout.
	A couple of new templates: document-size

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,18 +1,14 @@
 SUBDIRS = utils generated
 
-texi_docs = $(strip		\
-	faq.texi		\
-	quickstart.texi		\
-	release-notes.texi	\
-	teximacros.texi		\
-	beast-index.texi	\
+texi_docs = $(strip								\
+	WRITING.3.texi		teximacros.texi		beast-index.texi	\
+	faq.texi		quickstart.texi		release-notes.texi	\
+	site-contact.texi	site-download.texi	site-resources.texi	\
+	site-documentation.texi	site-news.texi		site-about.texi		\
 )
-private_docs = $(strip		\
-	bse-categories.txt	\
-	interpolation.txt	\
+extra_docs = $(strip					\
+	site-navigation.xml				\
+	bse-categories.txt	interpolation.txt	\
 )
 
-docsdir = ${beastdocsdir}
-docs_DATA = # ${public_docs}
-
-EXTRA_DIST = ${texi_docs} ${private_docs}
+EXTRA_DIST = ${texi_docs} ${extra_docs}
