moved most of this into site-oldnews.texi.
Tue Dec 31 18:17:44 2002  Tim Janik  <timj@gtk.org>

        * docs/site-news.texi: moved most of this into site-oldnews.texi.

        * docs/generated/Makefile.am: support @sedfix{top_srcdir} substitutions
        when copying .texi files to get ${top_srcdir} used by texi files.

        * docs/site-navigation.xml: sketched new website structure.

        * docs/site-development.texi:
        * docs/site-historic.texi:
        * docs/site-oldnews.texi: new website pages according to the new
        website structure.

svn path=/trunk/; revision=810

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -5,6 +5,7 @@ texi_docs = $(strip								\
 	faq.texi		quickstart.texi		release-notes.texi	\
 	site-contact.texi	site-download.texi	site-resources.texi	\
 	site-documentation.texi	site-news.texi		site-about.texi		\
+	site-development.texi	site-historic.texi	site-oldnews.texi	\
 )
 extra_docs = $(strip					\
 	site-navigation.xml				\
