new content, provide synthesis and related projects links.
Wed Jan  1 17:07:36 2003  Tim Janik  <timj@gtk.org>

        * docs/site-links-related.texi:
        * docs/site-links-synthesis.texi: new content, provide synthesis and
        related projects links.

        * docs/site-documentation.texi: provide some basic content.

        * docs/site-navigation.xml: restructured development docs,
        added link sections.

        * docs/site-news.texi: sync this with the real site.

        * docs/site-oldnews.texi: fix title.

        * site-resources.texi: introduce link sections.

        * site-about.texi: fixups.

svn path=/trunk/; revision=812

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -6,6 +6,7 @@ texi_docs = $(strip								\
 	site-contact.texi	site-download.texi	site-resources.texi	\
 	site-documentation.texi	site-news.texi		site-about.texi		\
 	site-development.texi	site-historic.texi	site-oldnews.texi	\
+	site-links-related.texi	site-links-synthesis.texi \
 )
 extra_docs = $(strip					\
 	site-navigation.xml				\
