small fix from alper.
Thu Jan  2 18:19:19 2003  Tim Janik  <timj@gtk.org>

        * docs/generated/html.xsl: small fix from alper.

        * docs/site-development.texi: use @example for markup.

svn path=/trunk/; revision=816

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,9 @@ SRC_SUBDIRS = sfi bse plugins bsw bsw-shell beast-gtk
 # other subdirs
 SUBDIRS = . $(SRC_SUBDIRS) docs test
 
+site site-update site-update-contents site-update-navigation:
+	$(MAKE) -C docs/ $(AM_MAKEFLAGS) $@
+
 # require automake 1.4
 AUTOMAKE_OPTIONS = 1.4
 
