new song sequencer implementation, based on the old song sequencing thread
Fri Jan  3 19:10:03 2003  Tim Janik  <timj@gtk.org>

        * bsessequencer.[hc]: new song sequencer implementation, based on the
        old song sequencing thread from bsesongthread.[hc].

        * bseproject.c: queue song sequencer jobs to start song playback and
        don't start synthesis networks any earlier than song playback.

        * bsesong.[hc]: use the new song sequencer.

        * gsloputils.[hc]:
        * gslopmaster.[hc]:
        * gslengine.[hc]: implemented engine timers, delayed commits and
        transaction merging.

        * gslengine.[hc]: (gsl_job_add_poll): leak fix, don't forget
        the free_func.

        * bsesongthread.[hc]: removed this.

svn path=/trunk/; revision=821

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -88,7 +88,7 @@ bse_public_h_sources = $(strip \
 	bsesnet.h \
 	bsesnooper.h \
 	bsesong.h \
-	bsesongthread.h \
+	bsessequencer.h \
 	bsesource.h \
 	bsestandardosc.h \
 	bsestandardsynths.h \
@@ -155,7 +155,7 @@ bse_c_sources = $(strip \
 	bsesnet.c \
 	bsesnooper.c \
 	bsesong.c \
-	bsesongthread.c \
+	bsessequencer.c \
 	bsesource.c \
 	bsestandardosc.c \
 	bsestandardsynths.c \
