setup BstAppControl, update led.
Tue Jan  7 00:17:40 2003  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstapp.c: setup BstAppControl, update led.

        * beast-gtk/bstappcontrol.[hc]: new files, providing a tape-control
        alike GUI interface to project playback (not currently functional).

        * beast-gtk/gxk/gxkled.[hc]: implemented led display widget.

        * beast-gtk/gxk/gxkpolygon.[hc]: new widget that can display
        unfilled lines and arcs, comes with preset polygons for tape
        controls.

        * beast-gtk/gxk/gxktest.c: test program for GXK code.

        * */Makefile.am: general INCLUDE fixes.

        * beast-gtk/Makefile.am: maintain same source file order for headers
        and C sources.

        * beast-gtk/gxk/Makefile.am: compact source file listing, build
        gxktest.

svn path=/trunk/; revision=826

--- a/beast-gtk/gxk/Makefile.am
+++ b/beast-gtk/gxk/Makefile.am
@@ -5,7 +5,7 @@
 
 SUBDIRS =
 
-INCLUDES = -I.. $(GXK_CFLAGS) -I.
+INCLUDES = -I${top_srcdir} -I. -I.. $(GXK_CFLAGS) # -I.. for <gxk/*.h> includes
 
 DEFS += $(strip \
 	-DGTK_DISABLE_COMPAT_H \
@@ -16,34 +16,20 @@ DEFS += $(strip \
 noinst_LIBRARIES = libgxk.a
 
 gxk_headers = $(strip \
-	gxk.h \
-	gxkcanvas.h \
-	gxkdialog.h \
-	gxkglobals.h \
-	gxkstatusbar.h \
-	gxkstock.h \
-	gxktexttools.h \
-	gxktoolbar.h \
-	gxkutils.h \
+	gxkled.h	gxkcanvas.h	gxkdialog.h	gxkglobals.h \
+	gxkstatusbar.h	gxkstock.h	gxktexttools.h	gxktoolbar.h \
+	gxkutils.h	gxkpolygon.h	gxk.h \
 )
 gxk_c_sources = $(strip \
-	gxkcanvas.c \
-	gxkdialog.c \
-	gxkglobals.c \
-	gxkstatusbar.c \
-	gxkstock.c \
-	gxktexttools.c \
-	gxktoolbar.c \
-	gxkutils.c \
+	gxkled.c	gxkcanvas.c	gxkdialog.c	gxkglobals.c \
+	gxkstatusbar.c	gxkstock.c	gxktexttools.c	gxktoolbar.c \
+	gxkutils.c	gxkpolygon.c \
 )
 gxk_extra_sources = $(strip \
 	gxkmarshal.list \
 )
 gxk_built_sources = $(strip \
-	gxkmarshal.h \
-	gxkmarshal.c \
-	gxkgentypes.h \
-	gxkgentypes.c \
+	gxkmarshal.h	gxkmarshal.c	gxkgentypes.h	gxkgentypes.c \
 )
 
 GLIB_MKENUMS = glib-mkenums
@@ -92,6 +78,16 @@ $(srcdir)/gxkgentypes.c: $(gxk_headers)
 	&& rm -f xgen-ggtc
 
 libgxk_a_SOURCES = $(gxk_c_sources)
+
+progs_LDADD = $(strip \
+        libgxk.a \
+        $(top_builddir)/sfi/libsfi.la \
+        $(LDFLAGS) $(BEAST_LIBS) \
+)
+
+noinst_PROGRAMS = gxktest
+gxktest_SOURCES = gxktest.c
+gxktest_LDADD = $(progs_LDADD)
 
 EXTRA_DIST += $(gxk_headers) $(gxk_extra_sources) $(gxk_built_sources)
 MAINTAINERCLEANFILES += $(gxk_built_sources) $(stamp_files)
