--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -6,7 +6,7 @@
 SUBDIRS = icons . freeverb
 
 CFLAGS   += $(EXTRA_CFLAGS)
-INCLUDES += -I$(top_srcdir) $(BSE_CFLAGS) -DG_LOG_DOMAIN=BSE_PLUGIN_NAME
+INCLUDES += -I$(top_srcdir) -I. $(BSE_CFLAGS) -DG_LOG_DOMAIN=BSE_PLUGIN_NAME
 INCLUDES += -DBSE_PLUGIN_FALLBACK="\"$(strip $(basename $(<F)))\""
 GLIB_MKENUMS = glib-mkenums
 
