removed website related files from EXTRA_DIST, as we don't plan to release
Sat Jan 11 16:04:18 2003  Tim Janik  <timj@gtk.org>

        * docs/Makefile.am: removed website related files from EXTRA_DIST,
        as we don't plan to release the website with tarballs ;)

        * docs/generated/Makefile.am: send css stuff along with website
        updates. simplified and broadened clean rules. watch your *.ps,
        *.pdf, *.xml, *.html and beast-site-*.tar.gz files, make clean
        will wipe them all. introduced site-upgrade rule which does
        a complete upgrade of beast.gtk.org to CVS contents, while
        site-update only transmits frequently altered docs.

        * docs/generated/css: new directory, containing site related
        CSS stuff.

        * docs/generated/css/default.css: Default CSS file for the BEAST
        website from Alper Ersoy.

        * docs/generated/css/images: new directory, containing site related
        CSS images.

        * docs/generated/css/images/*.png: added images from Alper Ersoy
        for default.css.

svn path=/trunk/; revision=842

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -3,17 +3,12 @@ SUBDIRS = utils generated
 texi_docs = $(strip								\
 	WRITING.3.texi		teximacros.texi		beast-index.texi	\
 	faq.texi		quickstart.texi		release-notes.texi	\
-	site-contact.texi	site-download.texi	site-resources.texi	\
-	site-documentation.texi	site-news.texi		site-about.texi		\
-	site-development.texi	site-historic.texi	site-oldnews.texi	\
-	site-links-related.texi	site-links-synthesis.texi \
 )
 extra_docs = $(strip					\
-	site-navigation.xml				\
 	bse-categories.txt	interpolation.txt	\
 )
 
-site site-update site-update-contents site-update-navigation:
-	$(MAKE) -C generated/ $(AM_MAKEFLAGS) $@
-
 EXTRA_DIST = ${texi_docs} ${extra_docs}
+
+site site-upgrade site-update site-update-con site-update-img site-update-nav:
+	$(MAKE) -C generated/ $(AM_MAKEFLAGS) $@
