--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ SRC_SUBDIRS = sfi bse plugins bsw bsw-shell beast-gtk
 # other subdirs
 SUBDIRS = . $(SRC_SUBDIRS) docs test
 
-site site-update site-update-contents site-update-navigation:
+site site-upgrade site-update site-update-con site-update-img site-update-nav:
 	$(MAKE) -C docs/ $(AM_MAKEFLAGS) $@
 
 # require automake 1.4
